# ADR2019

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  dataflow.odg  git_workflow.txt  install_dependencies.sh  package.xml
Matlab/: GateData.mat  NavPID.mat  OdomBEBOP.mat  OdomZED.mat  ROS_Pose_Compare_data_grabber.m  ROS_data_grabber.m  ROS_display.m  ROS_display_Gate.m
cpp_src/gate_detection/: CMakeLists.txt  camera_calibration  eager_example.cpp  main.cpp
msg/: Auto_Driving_Msg.msg  Gate_Detection_Msg.msg  WP_Msg.msg
scripts/: common_resources.py  driving.py  gate_detection.py  ground_output.py  main_navigation.py  tune_colors.py  tune_colors_values.txt
scripts/development_scripts/: driving_dynamic_openloop.py  odometry_merger.py  odometry_recorder.py  startup_GCS_testing.launch  startup_jetson.launch  test_publisher.py  test_subscriber.py
scripts/gate_detection_cuda/: custom_exceptions.py  gate_detection_cuda.py  main.py  mnist_sample.py  object_detection_tutorial.py
